--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="icon" href="imgenes/favicon.ico" type="imgenes/ico"/>
 	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 	</script>
+	<script src="js/funciones.js"></script>
 </head>
 <body>
 	 <header>
@@ -27,10 +28,14 @@
 	 </header>
 	 <nav class="barra">
 	 	<ul class="menu">
-			<a href="#"><li><button class="btn">Opccion 1</button></li></a>
-			<a href="#"><li><button class="btn">Opccion 2</button></li></a>
-			<a href="#"><li><button class="btn">Opccion 3</button></li></a>
-			<a href="#"><li><button class="btn">Opccion 4</button></li></a>
+			<a href="#"><li><button class="btn" onclick="prueba()">Inicio</button></li></a>
+			<a href="#"><li><button class="btn" onclick="prueba()">Catalogo</button></li></a>
+			<a href="#"><li><button class="btn" onclick="prueba()">Recursos</button></li></a>
+			<a href="#"><li><button class="btn" onclick="prueba()">Herramientas</button></li></a>
+			<a href="#"><li><button class="btn" onclick="prueba()">Sitios de interés</button></li></a>
+			<a href="#"><li><button class="btn" onclick="prueba()">Descargas</button></li></a>
+			<a href="#"><li><button class="btn" onclick="prueba()">Bibliotecario</button></li></a>
+			<a href="#"><li><button class="btn" onclick="prueba()">Ayuda</button></li></a>
 		</ul>
 	 </nav>
 	 <section class="cuerpo_page" >
