--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Universidad Tecnológica de Panamá</title>
 	<link rel="stylesheet" type="text/css" href="estilo/estilo.css">
 	<link rel="icon" href="imgenes/favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="imgenes/favicon.ico" type="image/x-icon"/>
 	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 	</script>
 	<script src="js/funciones.js"></script>
